refactor: modularize codebase, add unit tests, and polish documentation
- Split main.rs into api, audio, config, and injector modules.
- Implement async non-blocking audio processing with Arc and tokio::spawn.
- Add 6 unit tests covering configuration, key parsing, and command logic.
- Create comprehensive README.md and add MIT License.
- Remove all development-specific AI references and GEMINI.md.
- Fix clippy warnings and apply standard rustfmt.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "voice-ptt"
 version = "0.1.0"
 edition = "2021"
+description = "A professional-grade Push-to-Talk voice dictation tool for Linux (X11) written in Rust."
+authors = ["Your Name <your.email@example.com>"]
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/yourusername/voice-ptt"
+keywords = ["rust", "linux", "voice-to-text", "whisper", "automation", "x11"]
+categories = ["command-line-utilities", "accessibility", "multimedia::audio"]
 
 [dependencies]
 anyhow = "1.0"
